# django-ci

./: manage.py  pyproject.toml
.github/workflows/: ci.yml
app/userapp/: tests.py
bhnvx/: asgi.py  settings.py  urls.py  wsgi.py
bhnvx/settings_/: base.py
build_/: dockerfile  nginx.conf
shell/: docker_install.sh  test.sh
